{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 7,
  "lineage": "43454f35-b89b-82bd-a2d4-c35cd140e02e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882342736216:vpc/vpc-dc6d07a6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e0490e8c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-a77166dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-dc6d07a6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3cf70642",
            "owner_id": "882342736216",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_lc_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882342736216:security-group/sg-0690a7951da70478d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0690a7951da70478d",
            "ingress": [],
            "name": "asg-module-test-lc-sg",
            "name_prefix": null,
            "owner_id": "882342736216",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dc6d07a6"
          }
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_8080_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-865653245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0690a7951da70478d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.asg.aws_security_group.terraform_lc_sg"
          ]
        }
      ]
    }
  ]
}